datetime: Fix incorrect sensitivity when permission is missing

When the permission is missing, we shouldn't make the rows sensitive.

https://bugzilla.gnome.org/show_bug.cgi?id=709774